# ComputationalEconomics

./: .gitignore  CMakeLists.txt  generate_movies.py  output.txt  plots.py  report.ipynb  run.sh  run_simulations.sh  stability.ipynb
code/: board.cpp  board.h  game_of_life_thread.cpp  rules.cpp  rules.h  solver_thread.cpp  solvers.h
results/Stochastic/: Stochastic_0.0_0.0.txt  Stochastic_0.0_0.8.txt  Stochastic_0.0_1.0.txt  Stochastic_1.0_0.0.txt
results/VonNeumann/: VonNeumann_0.0_0.0.txt  VonNeumann_0.0_0.2.txt  VonNeumann_0.0_0.5.txt  VonNeumann_0.0_0.8.txt  VonNeumann_0.0_1.0.txt  VonNeumann_0.2_0.0.txt  VonNeumann_0.5_0.0.txt  VonNeumann_0.8_0.0.txt  VonNeumann_1.0_0.0.txt
